fix text align

--- a/css/bill_add.css
+++ b/css/bill_add.css
@@ -3,18 +3,15 @@ body {
     padding-bottom: 40px;
 }
 
-div {
-    text-align: center;
-}
-
 .hint {
     margin: 20px auto 20px;
+    text-align: center;
 }
 
 .tag {
     width: 50px;
     text-align: right;
-    margin: 10px auto 10px;
+    margin-left: 30px;
 }
 
 .onecolumn {
@@ -36,6 +33,6 @@ div {
 }
 
 .btn {
-    margin: 10px auto 10px;
+    margin-left: 100px;
     width: 150px;
 }
